fixed alignment of loading img on mobile - was caused by an uncleared float

--- a/css/main.css
+++ b/css/main.css
@@ -217,8 +217,9 @@ body {
 .loading{
     animation:spin 800ms linear infinite;
     width:150px;
-    margin:0 auto;
-    display:block;
+    display: block;
+    margin: 0 auto;
+    clear: both;
 }
 
 .home,.settings {
